--- a/BlindAR-DX/BlindAR-DX.csproj
+++ b/BlindAR-DX/BlindAR-DX.csproj
@@ -66,6 +66,7 @@
     <Compile Include="BlindAR_DXMain.cs" />
     <Compile Include="AppView.cs" />
     <Compile Include="AppViewSource.cs" />
+    <Compile Include="Classes\FingerTracking.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Common\CameraResources.cs" />
     <Compile Include="Common\DeviceResources.cs" />
