--- a/OpenCVBridge/OpenCVHelper.vcxproj
+++ b/OpenCVBridge/OpenCVHelper.vcxproj
@@ -208,7 +208,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="D:\TMP-Delete\HoloLensArucoTracking-master\TrackingPlugin\src\aruco_tracking.h" />
+    <ClInclude Include="aruco_tracking.h" />
     <ClInclude Include="include\opencv2\aruco.hpp" />
     <ClInclude Include="include\opencv2\aruco\charuco.hpp" />
     <ClInclude Include="include\opencv2\aruco\dictionary.hpp" />
@@ -539,7 +539,7 @@
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="D:\TMP-Delete\HoloLensArucoTracking-master\TrackingPlugin\src\aruco_tracking.cpp" />
+    <ClCompile Include="aruco_tracking.cpp" />
     <ClCompile Include="OpenCVHelper.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
